this is the current setting defined in /srv/wiki/current/bin/setenv.sh